<resources>
    <string name="app_name">警情推送</string>
    <string name="query">查询</string>
    <string name="collection">采集</string>
    <string name="task">任务</string>
    <string name="map">地图</string>
    <string name="police_manage">警情管理</string>
    <string name="police_event_query">警情查询</string>
    <string name="police_event_deal">警情处置</string>
    <string name="police_event_report">警情上报</string>
    <string name="reporter">报警人:</string>
    <string name="reporter_phone">报警电话:</string>
    <string name="report_time">报警时间:</string>
    <string name="event_type">警情类别:</string>
    <string name="minute">分</string>
    <string name="month">月</string>
    <string name="hour">时</string>
    <string name="day">日</string>
    <string name="year">年</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="report_or_phone_not_empty">请输入报警人或报警电话</string>
    <string name="report">我要上报</string>
    <string name="event_theme">主题:</string>
    <string name="event_position">地点:</string>
    <string name="event_time">时间:</string>
    <string name="create_event">我要上报</string>

    <string-array name="police_event_type">
        <item>120</item>
        <item>119</item>
        <item>110</item>
    </string-array>
</resources>
