<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <import type="com.xdja.jwt.jgts.activity.policequery.IPoliceEventQueryPresenter"/>
        <variable
            name="presenter"
            type="IPoliceEventQueryPresenter"/>
    </data>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1">
            <TableRow style="@style/PoliceEventQueryRow">
                <TextView style="@style/PoliceEventQueryText" android:text="@string/reporter"/>
                <EditText style="@style/PoliceEventQueryInput" android:id="@+id/reporter" android:layout_span="2"/>
            </TableRow>
            <TableRow style="@style/PoliceEventQueryRow">
                <TextView style="@style/PoliceEventQueryText" android:text="@string/reporter_phone"/>
                <EditText style="@style/PoliceEventQueryInput" android:id="@+id/report_phone" android:layout_span="2"/>
            </TableRow>
            <TableRow style="@style/PoliceEventQueryRow">
                <TextView style="@style/PoliceEventQueryText" android:text="@string/report_time"/>
                <EditText style="@style/PoliceEventQueryInput" android:id="@+id/report_time"/>
                <Button android:text="date" android:onClick="@{()->presenter.pickDate()}"/>
            </TableRow>

            <TableRow>
                <TextView style="@style/PoliceEventQueryText" android:text="@string/event_type"/>
                <Spinner android:id="@+id/type_spinner" android:entries="@array/police_event_type"/>
            </TableRow>
        </TableLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/query"
            android:onClick="@{()->presenter.query()}"/>
    </LinearLayout>
</layout>